package ar.edu.unrc.dc.model;

public interface Observer {
    void update(StarfighterGameEngine subject);
}