' Generated by UML Generator
' Encoded: lLNBRjim4BphAtYqqreGSelG1WcS5YdGeaLi86TQMbjiHL8WLsxTnx-Nr9kKbJX8a8i0xSpkB9UpqfL6gh3aUQ1_C55GHJb9SghrDQ9YcnBXKoB5Ylq64WKPIu4aJ2Kv14758Ykao3IoHDymNUJqGFu4X2mu_RK6NiHacqkAv3s9mcXR0Koum7aKsJYQuAhaumHHyZkWAHCx7HCcqCP-0iKCr0r56fFx_iLY2_DuC-fgDfKoj_IoI2d23Fl6tfAiv2nbUEW2XGAjImLDO1wJlMIfJKyRZJRqhntEibGA12wbC9MO5EwCh1meYdrD6_LqJphkbCvi_Y1wwapS9bzcD1-bWeHgT2QIr9r-SyjParo45-UL7KooZvyq8a_ljVrWZ0jgInCWNpSQr1vKTU9dAJbbL-NcEoHOLrMmC-u7rMhDPDpf3lfKmEKU7Y49YMnxQ04zlid1yEfRb2qt9fzD6-_QtCidcRuONt9raGEvsjwlSLW3SQ2s7MxygPSP5Jj8Xx06_39WF7TlTe3hle8LQgTWeTkca1zl5wEFEnvflFyXhtgihJAve6lGs0sYvg89hJC5S7H05hrpXpmeElvFXE7Vo-uEfd2tvIEiiyN2sVV9Jwuhzp3DKvqa--B-HytLF8fwKZx7LsZNF0m7XOSRM1LjM0uWJQKkumf4Qlxv_m4
' URL: http://www.plantuml.com/plantuml/uml/lLNBRjim4BphAtYqqreGSelG1WcS5YdGeaLi86TQMbjiHL8WLsxTnx-Nr9kKbJX8a8i0xSpkB9UpqfL6gh3aUQ1_C55GHJb9SghrDQ9YcnBXKoB5Ylq64WKPIu4aJ2Kv14758Ykao3IoHDymNUJqGFu4X2mu_RK6NiHacqkAv3s9mcXR0Koum7aKsJYQuAhaumHHyZkWAHCx7HCcqCP-0iKCr0r56fFx_iLY2_DuC-fgDfKoj_IoI2d23Fl6tfAiv2nbUEW2XGAjImLDO1wJlMIfJKyRZJRqhntEibGA12wbC9MO5EwCh1meYdrD6_LqJphkbCvi_Y1wwapS9bzcD1-bWeHgT2QIr9r-SyjParo45-UL7KooZvyq8a_ljVrWZ0jgInCWNpSQr1vKTU9dAJbbL-NcEoHOLrMmC-u7rMhDPDpf3lfKmEKU7Y49YMnxQ04zlid1yEfRb2qt9fzD6-_QtCidcRuONt9raGEvsjwlSLW3SQ2s7MxygPSP5Jj8Xx06_39WF7TlTe3hle8LQgTWeTkca1zl5wEFEnvflFyXhtgihJAve6lGs0sYvg89hJC5S7H05hrpXpmeElvFXE7Vo-uEfd2tvIEiiyN2sVV9Jwuhzp3DKvqa--B-HytLF8fwKZx7LsZNF0m7XOSRM1LjM0uWJQKkumf4Qlxv_m4
' Generated on: 2025-09-22T08:39:14.651309344

@startuml
skinparam classAttributeIconSize 0
hide circle

class StatisticsDisplay {
  -maxTemp: float = 0.0f
  -minTemp: float = 200
  -tempSum: float = 0.0f
  -numReadings: int
  -weatherData: WeatherData
  --
  +StatisticsDisplay(weatherData: WeatherData)
  +update(temp: float, humidity: float, pressure: float): void
  +display(): void
}

class CurrentConditionsDisplay {
  -temperature: float
  -humidity: float
  -weatherData: WeatherData
  --
  +CurrentConditionsDisplay()
  +CurrentConditionsDisplay(weatherData: WeatherData)
  +update(temperature: float, humidity: float, pressure: float): void
  +display(): void
}

class ForecastDisplay {
  -currentPressure: float = 29.92f
  -lastPressure: float
  -weatherData: WeatherData
  --
  +ForecastDisplay(weatherData: WeatherData)
  +update(temp: float, humidity: float, pressure: float): void
  +display(): void
}

interface Observer {
  +update(temp: float, humidity: float, pressure: float): void
}

interface Subject {
  +registerObserver(o: Observer): void
  +removeObserver(o: Observer): void
  +notifyObservers(): void
}

class WeatherData {
  -observers: List<Observer>
  -temperature: float
  -humidity: float
  -pressure: float
  --
  +WeatherData()
  +registerObserver(o: Observer): void
  +removeObserver(o: Observer): void
  +notifyObservers(): void
  +measurementsChanged(): void
  +setMeasurements(temperature: float, humidity: float, pressure: float): void
  +getTemperature(): float
  +getHumidity(): float
  +getPressure(): float
}

interface DisplayElement {
  +display(): void
}

class TestObservers {
  +testThreeObservers(): void
  +testRemoveObserver(): void
}

StatisticsDisplay ..|> Observer
StatisticsDisplay ..|> DisplayElement
StatisticsDisplay *-- WeatherData
CurrentConditionsDisplay ..|> Observer
CurrentConditionsDisplay ..|> DisplayElement
CurrentConditionsDisplay *-- WeatherData
ForecastDisplay ..|> Observer
ForecastDisplay ..|> DisplayElement
ForecastDisplay *-- WeatherData
Subject ..> Observer
WeatherData ..|> Subject
WeatherData o-- Observer
@enduml